adding scalability testing